# image_show

./: CMakeLists.txt  README
include/: readAndShow.h  readImg.h
src/: readAndShow.cpp  readImg.cpp
test/: main.cpp
